<resources>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="mbt_prompt_msg">Please select a Topic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_into_app">Activation Screen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home_page">  OAU CSC 201(JAVA) </string>
    <string name="title_activity_past_question">PastQuestion</string>
    <string name="title_activity_pqsolution_list">PQSolutionList</string>
    <string name="title_activity_pqsolutions">PQSolutions</string>
    <string name="title_activity_solution">SolutionActivity</string>
    <string name="title_activity_tutorial_four">TutorialFour</string>
    <string name="title_activity_tutorial_one">Tutorial One</string>
    <string name="title_activity_tutorial_three">Tutorial Two</string>
    <string name="title_activity_tutoral_two">TutoralTwo</string>
    <string name="app_name">OAU CSC 201</string>
    <string name="tutorialone">Tutorial One</string>
    <string name="tutorialtwo">Tutorial Two</string>
    <string name="tutorialthree">Tutorial Two</string>
    <string name="menumcqs">Java MCQs</string>
    <string name="pq">OAU Past Question</string>
    <string name="about">About</string>
    <string name="title_activity_examsection">examsection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_mbt__hompage">Java MCQs Test</string>
    <string name="title_activity_mbt__exampage">Java MCQs Test</string>
    <string name="title_activity_mbt__result__preview">Result</string>
    <string name="title_activity_mbt__answers__display">Solution</string>
</resources>
